--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>React 직접 만들어보기</title>
   </head>
-  <body></body>
+  <body>
+    <div id="root"></div>
+    <script src="app.js" type="module"></script>
+  </body>
 </html>
